# hotmart-mcp

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  TESTING.md  claude_desktop_config.json  hotmart_mcp.py  pyproject.toml  run_tests.py  test_runner.py  test_sse_poc.py
.github/workflows/: build-and-publish.yml
src/: hotmart_mcp.py
src/hotmart/: auth.py  client.py  config.py  models.py  tools.py
src/hotmart/models/: __init__.py  base.py  product.py  sale.py  subscription.py
src/hotmart/tools/: __init__.py  base.py  products.py  sales.py
src/tests/: __init__.py  run_tests.py  test_auth.py  test_client.py  test_config.py  test_imports.py  test_products.py  test_runner.py  test_sales.py  test_sse_poc.py  test_tools.py
